[metadata]
name = async_app
url = https://github.com/Kentzo/async-app/
author = Ilya Kulakov
author_email = kulakov.ilya@gmail.com
classifiers =
   Development Status :: 4 - Beta
   Framework :: AsyncIO
   Intended Audience :: Developers
   Programming Language :: Python :: 3.5
   Programming Language :: Python :: 3.6
   Topic :: Software Development :: Libraries :: Application Frameworks
license = Apache 2
description =
long_description = file: README.rst
keywords = asyncio, app, framework

[options]
packages = async_app
python_requires = >=3.6
zip_safe = True

[bdist_wheel]
universal=1

[tool:pytest]
addopts= --cov=async_app --cov-report=term-missing --cov-report=html --cov-branch --ignore=setup.py
testpaths=tests

[flake8]
max-line-length = 120
