[metadata]
name = async_app
url = https://github.com/Kentzo/async_app/
author = Ilya Kulakov
author_email = kulakov.ilya@gmail.com
classifiers =
    Development Status :: 4 - Beta
    Framework :: AsyncIO
    Intended Audience :: Developers
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Libraries :: Application Frameworks
    License :: OSI Approved :: Apache Software License
license = Apache 2
description = AsyncIO application as a hierarchy of services
long_description = file: README.rst
keywords = asyncio, app, framework

[options]
packages = async_app
python_requires = >=3.6
zip_safe = True

[bdist_wheel]
universal = 1

[tool:pytest]
testpaths = tests

[flake8]
max-line-length = 120

[tox]
envlist =
    typeguard
    pytypes
    check

[testenv]
deps =
    {env:TOX_TESTENV_DEPS:}
install_command = python -m pip install {opts} {packages} -c requirements/constraints.txt
commands =
    python setup.py test

[testenv:typeguard]
extras =
    typeguard

[testenv:pytypes]
extras =
    pytypes

[testenv:check]
skip_install = True
ignore_outcome = True
commands =
    python setup.py check -srm
    flake8 async_app
    coverage combine {env:COVERAGE_FILE_PYTYPES:} {env:COVERAGE_FILE_TYPEGUARD:}
    coverage html
    codecov
